# OpenMedic

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml
examples/: config.yml  five_binary.yml  five_binary_eval.yml  five_binary_infer.yml  five_binary_train.yml
examples/manifest_files/: five_binary_eval.yml
src/openmedic/: __init__.py
src/openmedic/cli/: __init__.py  cli_management.py
src/openmedic/cli/commands/: __init__.py  general.py  pipelines.py  run.py
src/openmedic/core/pipelines/: __init__.py  eval.py  infer.py  train.py
src/openmedic/core/shared/: SHARED.md  __init__.py  constants.py  helper.py
src/openmedic/core/shared/services/: __init__.py  config.py  utils.py
src/openmedic/core/shared/services/objects/: __init__.py  loss_function.py  metric.py  model.py  monitor.py  optimization.py  transform.py
src/openmedic/core/shared/services/objects/model_zoo/unet/: __init__.py  model.py  utils.py
src/openmedic/core/shared/services/objects/ops/losses/: dice_loss.py
src/openmedic/core/shared/services/objects/ops/metrics/: dice_score.py
src/openmedic/core/shared/services/objects/ops/monitors/: checkpoint.py
src/openmedic/core/shared/services/objects/ops/transformers/: flip.py  resize.py
src/openmedic/core/shared/services/plans/: __init__.py  custom_dataset.py  custom_eval.py  custom_infer.py  custom_train.py  management.py  registry.py
tests/: __init__.py  conftest.py  test_config.py  test_resize.py
tests/ops/: TEST_RESIZE.md  test_resize.py
