[project]
name = "openmedic"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = "==3.10.18"
dependencies = [
    "click>=8.2.1",
    "opencv-python>=4.11.0.86",
    "pycocotools>=2.0.8",
    "pyyaml>=6.0.2"
]

[project.optional-dependencies]
cpu = [
    "torch>=2.2.2",
    "torchvision>=0.17.2"
]
gpu = [
    "torch>=2.2.2",
    "torchvision>=0.17.2"
]

[project.scripts]
openmedic = "openmedic.cli.cli_management:cli"

[tool.setuptools.dynamic]
version = {attr = "openmedic.__version__"}

[tool.uv.sources]
torch = [
    { index = "torch-cpu", extra = "cpu" },
    { index = "torch-gpu", extra = "gpu" }
]
torchvision = [
    { index = "torch-cpu", extra = "cpu" },
    { index = "torch-gpu", extra = "gpu" }
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[[tool.uv.index]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu124"